--- a/app/src/main/res/layout/activity_my_account.xml
+++ b/app/src/main/res/layout/activity_my_account.xml
@@ -7,7 +7,7 @@
     tools:context=".myAccount">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/userImage"
         android:layout_width="162dp"
         android:layout_height="169dp"
         android:layout_marginTop="20dp"
@@ -27,7 +27,7 @@
         android:paddingEnd="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView">
+        app:layout_constraintTop_toBottomOf="@+id/userImage">
 
         <Button
             android:id="@+id/wishlist"
