--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,37 +4,37 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/lb"
+    android:background="#393e46"
     tools:context=".LoginActivity">
 
 
     <!--EMAIL LAYOUT-->
 
     <!--PASSWORD LAYOUT-->
+
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/EmailLayout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="250dp"
         android:layout_height="75dp"
-        android:layout_marginTop="216dp"
+        android:layout_marginTop="180dp"
         android:hint="@string/Email"
-        app:hintTextColor="#ffffff"
         android:textColorHint="#ffffff"
-        app:boxStrokeColor="@color/colorPrimaryDark"
+        app:boxStrokeColor="@color/colorAccent"
         app:boxStrokeWidth="2dp"
         app:boxStrokeWidthFocused="3dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        >
+        app:hintTextColor="#ffffff"
+        app:layout_constraintEnd_toEndOf="@+id/passwordLayout"
+        app:layout_constraintStart_toStartOf="@+id/passwordLayout"
+        app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editTextEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/berkshire_swash"
             android:inputType="textEmailAddress"
-            android:textColor="#f9ed69"
-            />
+            android:textColor="#FFFFFF" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -45,22 +45,70 @@
         android:layout_marginTop="10dp"
         android:hint="@string/Password"
         android:textColorHint="#ffffff"
-        app:hintTextColor="#ffffff"
-        app:boxStrokeColor="@color/colorPrimaryDark"
+        app:boxStrokeColor="@color/colorAccent"
         app:boxStrokeWidth="2dp"
         app:boxStrokeWidthFocused="3dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/EmailLayout"
+        app:hintTextColor="#ffffff"
+        app:layout_constraintEnd_toEndOf="@+id/LogIn"
+        app:layout_constraintStart_toStartOf="@+id/LogIn"
+        app:layout_constraintTop_toBottomOf="@+id/EmailLayout"
         app:passwordToggleEnabled="true">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/berkshire_swash"
             android:inputType="textPassword"
-            android:textColor="#f9ed69"/>
+            android:textColor="#FFFFFF" />
     </com.google.android.material.textfield.TextInputLayout>
+
+    <Button
+        android:id="@+id/LogIn"
+        android:layout_width="127dp"
+        android:layout_height="41dp"
+        android:layout_below="@id/passwordLayout"
+        android:layout_marginTop="29dp"
+        android:background="@drawable/round_button"
+        android:gravity="center_horizontal|center_vertical"
+        android:onClick="logIn"
+        android:text="Log In"
+        app:layout_constraintEnd_toEndOf="@+id/googleLoginBtn"
+        app:layout_constraintStart_toStartOf="@+id/googleLoginBtn"
+        app:layout_constraintTop_toBottomOf="@+id/textViewForgetPass" />
+
+    <TextView
+        android:id="@+id/textViewForgetPass"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:text="Forget Password?"
+        app:layout_constraintEnd_toEndOf="@+id/passwordLayout"
+        app:layout_constraintTop_toBottomOf="@+id/passwordLayout" />
+
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/googleLoginBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="51dp"
+        app:layout_constraintEnd_toEndOf="@+id/signUp"
+        app:layout_constraintStart_toStartOf="@+id/signUp"
+        app:layout_constraintTop_toBottomOf="@+id/LogIn" />
+
+    <TextView
+        android:id="@+id/signUp"
+        style="@style/TextAppearance.AppCompat.Title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="106dp"
+        android:layout_marginEnd="107dp"
+        android:layout_marginBottom="31dp"
+        android:text="New User? Create an Account"
+        android:textColor="#FBC02D"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <!--LOGIN BUTTON-->
 
@@ -69,53 +117,6 @@
     <!--PASSWORD RECOVERY-->
 
     <!--GOOGLE SIGN IN BUTTON-->
-
-    <Button
-        android:id="@+id/LogIn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/passwordLayout"
-        android:layout_marginTop="28dp"
-        android:gravity="center_horizontal|center_vertical"
-        android:onClick="logIn"
-        android:text="Log In"
-        android:background="@color/colorAccent"
-        android:textAlignment="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/passwordLayout" />
-
-    <TextView
-        android:id="@+id/signUp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="New User? Create an Account"
-        android:textColor="#FBC02D"
-        android:textSize="15dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/LogIn" />
-
-    <TextView
-        android:id="@+id/textViewForgetPass"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-
-        android:layout_marginTop="44dp"
-        android:text="Forget Password?"
-        app:layout_constraintStart_toEndOf="@+id/LogIn"
-        app:layout_constraintTop_toBottomOf="@+id/passwordLayout" />
-
-    <com.google.android.gms.common.SignInButton
-        android:id="@+id/googleLoginBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signUp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
