--- a/app/src/main/res/layout/activity_my_account.xml
+++ b/app/src/main/res/layout/activity_my_account.xml
@@ -29,6 +29,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/userImage">
 
+
         <Button
             android:id="@+id/wishlist"
             android:layout_width="wrap_content"
@@ -54,8 +55,8 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="323dp"
-        android:layout_height="325dp"
+        android:layout_width="329dp"
+        android:layout_height="304dp"
         android:layout_marginStart="1dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="1dp"
@@ -64,14 +65,23 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/accUserName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/Widget.MaterialComponents.TextView"
+            android:layout_weight="1"
+            android:text="@string/username"
+            />
+
+        <!--<TextView
             android:id="@+id/accUserName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
             android:inputType="none"
-            android:text="UserName" />
+            android:text="UserName" />-->
 
         <TextView
             android:id="@+id/accMobile"
