--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -163,7 +163,7 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <ImageButton
-            android:id="@+id/chatButton"
+            android:id="@+id/myAdButton"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_row="0"
@@ -199,13 +199,13 @@
             android:src="@drawable/myaccount_logo" />
 
         <TextView
-            android:id="@+id/textViewChat"
+            android:id="@+id/textViewMyAd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_row="0"
             android:layout_column="0"
             android:layout_gravity="center|bottom"
-            android:text="Chat" />
+            android:text="MyAd" />
 
         <TextView
             android:id="@+id/textViewPostAd"
