--- a/app/src/main/res/layout/activity_vehicle.xml
+++ b/app/src/main/res/layout/activity_vehicle.xml
@@ -9,54 +9,71 @@
 
     <LinearLayout
         android:id="@+id/linearLayout2"
-        android:layout_width="221dp"
-        android:layout_height="359dp"
-        android:layout_marginTop="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:layout_marginHorizontal="70dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <EditText
-            android:id="@+id/model"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ems="10"
-            android:hint="Model"
-            android:inputType="textPersonName" />
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/brand"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:hint="Brand"
+                android:inputType="textPersonName" />
+
+            <EditText
+                android:id="@+id/model"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:hint="Model"
+                android:inputType="textPersonName" />
+        </LinearLayout>
+
 
         <EditText
             android:id="@+id/purchaseDate"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
-
+            android:inputType="date"
             android:hint="Date of Purchase" />
 
         <EditText
             android:id="@+id/kmsDriven"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
-
+            android:inputType="number"
             android:hint="KMs Driven" />
 
         <EditText
             android:id="@+id/milege"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
 
             android:hint="Milege(in Kmpl)"
-            android:inputType="textPersonName" />
+            android:inputType="number" />
 
         <EditText
             android:id="@+id/sellingPrice"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
@@ -66,13 +83,12 @@
 
         <EditText
             android:id="@+id/description"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
-
             android:hint="Description"
-            android:inputType="textPersonName" />
+            android:inputType="textMultiLine" />
 
     </LinearLayout>
 
@@ -123,12 +139,12 @@
         android:id="@+id/postButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
         android:onClick="post"
+        android:layout_marginBottom="20dp"
         android:text="Post"
         app:layout_constraintEnd_toEndOf="@+id/img2"
         app:layout_constraintStart_toStartOf="@+id/img2"
-        app:layout_constraintTop_toBottomOf="@+id/img2" />
+        app:layout_constraintBottom_toBottomOf="parent" />
 
     <Button
         android:id="@+id/UploadImageButton"
