--- a/app/src/main/res/layout/row_data.xml
+++ b/app/src/main/res/layout/row_data.xml
@@ -12,13 +12,13 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="234dp"
+        android:layout_height="wrap_content"
         android:padding="5dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -27,53 +27,76 @@
 
             <ImageView
                 android:id="@+id/adImageView"
-                android:layout_width="match_parent"
-                android:layout_height="154dp"
-                android:layout_marginTop="4dp"
+                android:layout_width="180dp"
+                android:layout_height="150dp"
+                android:layout_weight="0"
                 android:src="@mipmap/ic_launcher"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/AdProdName"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:gravity="center_horizontal"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/adImageView" />
-
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal">
-
+                android:layout_weight="1"
+                android:paddingHorizontal="12dp"
+                android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/AdProdPrice"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/AdProdModel"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="fill"
-                    android:layout_weight="1"
-                    android:gravity="center_horizontal"
-                    android:textSize="16sp" />
+                    android:layout_marginTop="8dp"
+                    android:gravity="start"
+                    android:text="Model"
+                    android:textSize="24sp"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/adImageView" />
 
-                <ImageButton
-                    android:id="@+id/imageButton"
-                    android:layout_width="wrap_content"
+                <TextView
+                    android:id="@+id/AdProdBrand"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:layout_gravity="fill"
-                    android:background="@null"
-                    android:contentDescription="Wishlist"
-                    app:srcCompat="@drawable/ic_star_border_black_24dp" />
+                    android:layout_marginTop="8dp"
+                    android:gravity="start"
+                    android:text="Brand"
+                    android:textSize="18sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/adImageView" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="fill"
+                        android:layout_weight="0"
+                        android:text="Rs. "
+                        android:gravity="bottom"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:id="@+id/AdProdPrice"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="9999"
+                        android:gravity="start"
+                        android:textSize="30sp" />
+
+                </LinearLayout>
+
 
             </LinearLayout>
+
 
         </LinearLayout>
 
