--- a/app/src/main/res/layout/activity_my_electronic.xml
+++ b/app/src/main/res/layout/activity_my_electronic.xml
@@ -4,14 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AdCategory.myAdActivity">
-
-    <ListView
-        android:id="@+id/Category"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
-        android:layout_marginBottom="520dp"
-        app:layout_constraintBottom_toBottomOf="parent" />
+    tools:context=".myAds.myElectronic">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
